[gd_scene load_steps=5 format=3 uid="uid://by7p5s8mayjt4"]

[ext_resource type="Script" path="res://SettingsMenu/settings_menu.gd" id="1_q4ccj"]
[ext_resource type="Texture2D" uid="uid://f3jpkjhqdqn1" path="res://assets/GoToMainMenuButton.png" id="2_q7lq0"]
[ext_resource type="Texture2D" uid="uid://drgvuerfnwcw2" path="res://assets/GoToCredistButton.png" id="3_duq1i"]
[ext_resource type="Texture2D" uid="uid://coj30yt4ixduu" path="res://assets/Krzy≈ºyk.png" id="4_vqhrr"]

[node name="SettingsMenu" type="Node2D"]
script = ExtResource("1_q4ccj")

[node name="MainMenu" type="Node2D" parent="."]
position = Vector2(565, 228)
metadata/_edit_group_ = true

[node name="MainMenuButton" type="Button" parent="MainMenu"]
offset_left = -124.0
offset_top = -62.0
offset_right = 128.0
offset_bottom = 62.0

[node name="Sprite2D" type="Sprite2D" parent="MainMenu"]
texture = ExtResource("2_q7lq0")

[node name="CreditsMenu" type="Node2D" parent="."]
position = Vector2(566, 379)
metadata/_edit_group_ = true

[node name="CreditsMenuButton" type="Button" parent="CreditsMenu"]
offset_left = -130.0
offset_top = -62.0
offset_right = 128.0
offset_bottom = 64.0

[node name="Sprite2D" type="Sprite2D" parent="CreditsMenu"]
texture = ExtResource("3_duq1i")

[node name="GoBack" type="Node2D" parent="."]
position = Vector2(561, 78)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="GoBack"]
scale = Vector2(2.25, 2.1875)
texture = ExtResource("4_vqhrr")

[node name="GoBackButton" type="Button" parent="GoBack"]
offset_left = -77.0
offset_top = -72.0
offset_right = 70.0
offset_bottom = 67.0
theme_type_variation = &"FlatButton"

[connection signal="pressed" from="MainMenu/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="CreditsMenu/CreditsMenuButton" to="." method="_on_credits_menu_button_pressed"]
[connection signal="pressed" from="GoBack/GoBackButton" to="." method="_on_go_back_button_pressed"]
